# MotionMatching

./: .gitignore  .gitmodules  README.md  build_codegen_script.bat  build_codegen_script.sh  build_console_app_script.bat  build_console_app_script.sh  build_dll_script.bat  build_script.bat  build_script.sh  create_project.bat  delete_codegen_files.sh  imgui.ini  run_script.bat  run_script.sh
Builds/: CMakeLists.txt
Builds/MotionMatching/: imgui.ini
Builds/RayTracing/: imgui.ini
Common/: CMakeLists.txt
Common/Shaders/CodegenTest/: standart.shader
Common/Shaders/Includes/: common_data.glsl  instancing.glsl  lambert_lighting.glsl  material.glsl  vs_input.glsl
Common/Shaders/SkyBox/: sky_box.frag
Common/Shaders/Standart/: standart_normal.frag  standart_normal.vert  standart_normal_uv.frag  standart_normal_uv.vert
Common/Sources/: 3dmath.cpp  3dmath.h  common.cpp  common.h  component.h  config.cpp  config.h  debug_log.cpp  debug_log.h  math.h  skybox.cpp  skybox.h
Common/Sources/Application/: application.cpp  application.h  application_metainfo.cpp  application_metainfo.h  config.cpp  context.cpp  context.h
Common/Sources/Camera/: arcball_camera.cpp  arcball_camera.h  camera.cpp  camera.h  free_camera.cpp  free_camera.h
Common/Sources/ECS/: ecs.h
Common/Sources/Engine/: camera.cpp  camera.h  file_dialog.cpp  input.cpp  input.h  iscene.h  resources.h  time.h  transform.cpp  transform.h
Common/Sources/Event/: input.cpp  input.h
Common/Sources/GameObject/: game_object.h
Common/Sources/Material/: material.cpp  material.h
Common/Sources/Mesh/: mesh.h  vertex_array_object.h
Common/Sources/Physics/: physics.cpp  physics.h
Common/Sources/Postfx/: postfx.cpp  postfx.h
Common/Sources/Scene/: scene.cpp  scene.h
Common/Sources/Serialization/: iserializable.h  reflection.h  serialization.cpp  serialization.h  settings_set.cpp  settings_set.h
Common/Sources/Shader/: shader.h  shader_factory.cpp
Common/Sources/Texture/: cube_map_texture.cpp  texture.cpp  texture.h  texture3d.h
Common/Sources/Time/: time.h  time_scope.h
Common/Sources/Transform/: transform.h
Common/Sources/ecs/: base_types.h  component_editor.cpp  component_editor.h  ecs.h  ecs_core.cpp  ecs_core.h  ecs_event.h  ecs_scene.cpp  ecs_scene.h  singleton.h  system_order.h  system_tag.h
Common/Sources/glm/: cmake_install.cmake
ECSCodeGenerator/: CMakeCache.txt  CMakeLists.txt  Makefile
Libs/: CMakeLists.txt
MainApplication/: CMakeLists.txt  imgui.ini
Projects/: CMakeLists.txt
Projects/Common/: CMakeLists.txt
Projects/Common/Sources/: 3dmath.cpp  3dmath.h  common.cpp  main.cpp
Projects/ECSCodeGen/: CMakeLists.txt
Projects/ECSCodeGen/Sources/: archetype.cpp  archetype.h  component_container.cpp  component_container.h  core_interface.cpp  core_interface.h  ecs_core.cpp  ecs_core.h  hash_string.h  main.cpp  parser_system_description.h  system_description.cpp  system_description.h  type_description.cpp  type_description.h
Projects/ECSExample/Sources/: main.cpp
Projects/Editor/: CMakeLists.txt
Projects/Editor/Sources/: iserializable.h  main.cpp  serialization.h
Projects/MotionMatching/: CMakeLists.txt  project.config
Projects/MotionMatching/Resources/: AnimationTags.txt  TreeHierarchy.txt  man_property  stateMachine.txt  test_reflectable
Projects/MotionMatching/Shaders/: animated_char.glsl  animated_char.glsl.animated_character.ps  animated_char.glsl.animated_character.vs  bones.glsl  bones.glsl.bones.ps  bones.glsl.bones.vs  section_plane.glsl  section_plane.glsl.section_plane.ps  section_plane.glsl.section_plane.vs
Projects/RTCompilation/: CMakeLists.txt
Projects/Strategy/: CMakeLists.txt  project.config
ShaderPrecompiler/: CMakeLists.txt
sources/: CMakeLists.txt  assimp.cmake  ecs_pull.cmake  exe.cmake  freetype.cmake  libs.cmake  module.cmake  sdl2.cmake
sources/Arcade/: CMakeLists.txt  dependencies.cmake  game.cmake
sources/ECSCodeGen/: CMakeLists.txt  main.cpp
sources/ECSMultiThreading/: CMakeLists.txt  das_stub.cpp  game.cmake  test.inl  test.inl.cpp
sources/ECSbenchmark/: CMakeLists.txt  constanta.h  dagor_test.inl  dagor_test.inl.cpp  dependencies.cmake  ecs.das  ecs_module.cpp  game.cmake  init.das  init.das.cpp  profiler.inl  profiler.inl.cpp  test.inl  test.inl.cpp  test_das_module.cpp
sources/MotionMatching/: CMakeLists.txt  dependencies.cmake  game.cmake
sources/Strategy/: CMakeLists.txt  borders.cpp  coin_effect.inl  coin_effect.inl.cpp  country_builder.inl  country_builder.inl.cpp  create_map.inl  create_map.inl.cpp  dependencies.cmake  game.cmake  heightmap.cpp  heightmap.h  map_editor.inl  map_editor.inl.cpp  map_render_data.h  political_map.h  provinces.inl  provinces.inl.cpp  render.inl  t.inl  t.inl.cpp  terrain.inl  terrain.inl.cpp
sources/Territorio/: CMakeLists.txt  array2d.h  camera.inl  camera.inl.cpp  create_map.inl  create_map.inl.cpp  das_stub.cpp  dependencies.cmake  game.cmake  game_events.h  game_structs.h  land_logic.inl  land_logic.inl.cpp  map_arrays.h  map_render.inl  map_render.inl.cpp  render.inl  render.inl.cpp  statistic_info.inl  statistic_info.inl.cpp  user_input.inl  user_input.inl.cpp  world_render.h
sources/Test/: CMakeLists.txt  dependencies.cmake  main.cpp
sources/common_systems/: CMakeLists.txt
sources/das/: CMakeLists.txt  common.das_project  common_das_modules.cpp  das_load.cpp  das_load.h  ecs.das  ecs_binds.cpp  ecs_module.cpp
sources/ecs/: CMakeLists.txt  base_types.h  component_editor.cpp  component_editor.h  ecs.h  ecs_core.cpp  ecs_core.h  ecs_event.cpp  ecs_event.h  ecs_event_impl.cpp  ecs_event_impl.h  ecs_event_registration.h  ecs_perform.h  ecs_scene.cpp  ecs_scene.h  ecs_stage.h  ecs_tag.h  system_order.h  system_tag.h  template.cpp  template.h  type_registration.h
sources/engine/: 3dmath.h  CMakeLists.txt  camera.cpp  camera.h  common.cpp  common.h  input.cpp  input.h  main.cpp  profiler.h  transform.cpp  transform.h  transform2d.cpp  transform2d.h
sources/old_ecs/: ecs_core.h  ecs_event.cpp  ecs_event.h  ecs_event_impl.cpp  ecs_event_impl.h  singleton.h  type_registration.h
(+976 files in other folders)
